# chj-rustbin

./: .gitignore  .rustsec-ignore.txt  COPYING.md  Cargo.toml  Makefile  README.md  TODO.md  bar2
include/: debian-contributors.tsv
meta/: release
src/: alist.rs  alternatively.rs  bag.rs  checked_mutex.rs  chunks.rs  conslist.rs  cpu_probe.rs  debian_version.rs  duu.rs  efficient_regex.rs  excel.rs  excludes.rs  file_path_type.rs  filtered.rs  fp.rs  get_terminal_width.rs  hack_static.rs  index_map.rs  io.rs  is_a_terminal.rs  item.rs  kitschcell.rs  leaked_region.rs  lib.rs  main.rs  merge.rs  merge_trait.rs  moreordering.rs  naturallanguagejoin.rs  numbers.rs  parse.rs  parse_error.rs  parsers.rs  path_file_kind.rs  path_from.rs  path_util.rs  rawfdreader.rs  readwithcontext.rs  region.rs  sequences.rs  (+10 more)
src/debian_version/: contributors.rs  get_release.rs  infos.rs  mod.rs  parse.rs  release_info.rs  release_info_with_contributors.rs  release_infos.rs
src/io/: excludes.rs  file_path_type.rs  rawfdreader.rs  readwithcontext.rs  unix_fs.rs  unix_gr.rs  unix_pw.rs  write_all_vectored.rs
src/io/unix/: mod.rs  unix_file_type.rs
src/io_utils/: mod.rs  read_buf.rs  read_dir_bufs.rs  read_find_bufs.rs
src/lst/: get_items.rs  mod.rs  path_cmp.rs  possibly_segmented_path.rs  segmented_path.rs
src/parse/: parse_error.rs  parsers.rs
src/text/: naturallanguagejoin.rs  parseutil.rs  startswith.rs  yattable.rs
src/time/: age_at.rs  excel.rs  naive_date_time_without_year.rs  tai.rs
src/unsafe_util/: mod.rs  raw_slice_mut.rs  unsafe_sync_send.rs
src/util/: div.rs  let_format_or.rs  map_trait.rs  pad.rs  range_utils.rs  scope.rs  statify.rs  vec_by_len.rs
test/: intersection-run  priorities-run  priorities-update-mtimes  priorities.err  priorities.mtimes  priorities.out  priorities2.out  run
test-data/symlinks-index/: bar3
test/intersection/1_normal/in/: b  d  unsorted
test/intersection/2_numeric/in/: a  b  c  d  unsorted
test/intersection/in/: a  c
test/priorities/: README
(+1 files in other folders)
