# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "chj-rustbin"
version = "0.1.0"
authors = ["Christian Jaeger <ch@christianjaeger.ch>"]
edition = "2018"

[profile.release]
opt-level = "s"

[dependencies]
structopt = "0.3"
anyhow = "1.0"
log = "0.4.8"
env_logger = "0.8.4"
rayon = "1.5.3"
nix = "0.25.0"
libc = "0.2.133"
bstr_parse = "0.1.0"
thiserror = "1.0.37"
